Fixed dashboard card spacing

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -17,7 +17,7 @@ margin-bottom: 50px;
 div .container .projectlist {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
 }
